# wallop_rs

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml  release.yml
docs/: cli.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_bundle_parse.rs  fuzz_parse_execution_receipt.rs  fuzz_verify_full.rs
src/: _test_support.rs  anchors.rs  bundle.rs  drand.rs  key_resolver.rs  lib.rs  verify_steps.rs  wasm.rs
src/catalog/: keypairs.rs  loader.rs  mod.rs  mutations.rs  runner.rs  scenarios.json  schema.rs
src/protocol/: crypto.rs  crypto_tests.rs  key_rotation_tests.rs  merkle_tests.rs  mod.rs  pre_lock_vector_tests.rs  receipts.rs  receipts_tests.rs  tests.rs
tests/: cli_integration.rs  pin_key_flag.rs  selftest_smoke.rs  temporal_binding_integration.rs
