[package]
name = "wallop_rs"
version = "0.3.0"
edition = "2024"
description = "Protocol functions and WASM verifier for the Wallop provably fair draw system."
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fair_pick_rs = { git = "https://github.com/electric-lump-software/fair_pick_rs.git", branch = "main" }
sha2 = "0.10"
hex = "0.4"
ed25519-dalek = { version = "2", default-features = false }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

