[package]
name = "wallop_verifier"
version = "0.13.0"
edition = "2024"
description = "Independent verifier for the Wallop! provably fair draw protocol."
license = "MIT"
repository = "https://github.com/electric-lump-software/wallop-verifier"
documentation = "https://docs.rs/wallop_verifier"
homepage = "https://wallop.run"
exclude = ["vendor/"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fair_pick_rs = { version = "0.1", git = "https://github.com/electric-lump-software/fair_pick_rs.git", branch = "main" }
sha2 = "0.10"
hex = "0.4"
ed25519-dalek = { version = "2", default-features = false }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1"
drand-verify = { version = "0.6", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
ratatui = { version = "0.30", optional = true }
crossterm = { version = "0.29", optional = true }

[features]
default = []
cli = ["clap", "drand-verify"]
tui = ["cli", "dep:ratatui", "dep:crossterm"]

[[bin]]
name = "wallop-verify"
path = "src/bin/wallop_verify.rs"
required-features = ["cli"]

[dev-dependencies]
wasm-bindgen-test = "0.3"
ed25519-dalek = { version = "2", features = ["std"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

